--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,12 @@
-.env .env.local .env.*.local .DS_Store
+node_modules/
+dist/
+build/
+.env
+.env.local
+.env.*.local
+.DS_Store
+.vscode/
+npm-debug.log*
+yarn-error.log*
+coverage/
+*.sqlite
